--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,11 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
-        "baseUrl": "./src",
+        "baseUrl": ".",
         "paths": {
-            "@components/*": ["/components/*"],
-            "@scss/*": ["/components/*"]
+            "@components/*": ["src/components/*"],
+            "@scss/*": ["src/components/*"],
+            "@pages/*": ["src/pages/*"]
         }
     },
     "include": ["src"],
