--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@types/node": "^18.8.3",
-    "g": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "sass": "^1.55.0",
     "vite": "^3.1.5"
   },
